Search Functionality - Adjustments